[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vsrealesrgan"
version = "3.1.0"
description = "Real-ESRGAN function for VapourSynth"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "HolyWu", email = "holywu@gmail.com"}]
keywords = ["Real-ESRGAN", "VapourSynth"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Topic :: Multimedia :: Video"
]
dependencies = [
  "numpy",
  "requests",
  "torch>=1.13.0",
  "torch-tensorrt-fx-only",
  "tqdm",
  "VapourSynth>=55"
]

[project.urls]
"Homepage" = "https://github.com/HolyWu/vs-realesrgan"
"Bug Tracker" = "https://github.com/HolyWu/vs-realesrgan/issues"
