[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vsrealesrgan"
version = "4.0.1"
description = "Real-ESRGAN function for VapourSynth"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "HolyWu", email = "holywu@gmail.com"}]
keywords = ["Real-ESRGAN", "VapourSynth"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Topic :: Multimedia :: Video"
]
dependencies = [
  "numpy>=1.24.2",
  "requests>=2.28.2",
  "torch>=1.13.1",
  "torch-tensorrt-fx-only>=1.3.0",
  "tqdm>=4.65.0",
  "VapourSynth>=55"
]

[project.urls]
"Homepage" = "https://github.com/HolyWu/vs-realesrgan"
"Bug Tracker" = "https://github.com/HolyWu/vs-realesrgan/issues"
