[metadata]
name = vsrealesrgan
version = 1.1.0
author = HolyWu
description = RealESRGAN function for VapourSynth
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HolyWu/vs-realesrgan
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Video

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    requests
    torch
    tqdm

[options.package_data]
* = *.pth
